# idiotypeforge

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: __init__.py
app/agent/: __init__.py  orchestrator.py  router.py
app/agent/prompts/: dossier.md  system.md
app/calibration/: __init__.py  isotonic.py
app/eval/: __init__.py  cdr3_masked.py
app/tools/: __init__.py  _mocks.py  _types.py  car_assembler.py  cdr_liabilities.py  compose_dossier.py  dose_estimator.py  igfold_predict.py  mhcflurry_predict.py  number_antibody.py  offtarget_search.py  render_structure.py  rescore_complex.py  rfdiffusion_design.py
app/ui/: __init__.py  decision_card.py  gradio_app.py  saliency.py
app/verification/: __init__.py  gates.py  provenance.py
data/: references.bib
data/demo_cases/: README.md  cll_subset2.fasta  dlbcl_young2015.fasta  fl_carlotti2009.fasta
docs/: CHAT_HANDOFF.md  EXPORT_DIAGRAM.md  PUSH_TO_GITHUB.md  architecture.excalidraw  video_shotlist.md  writeup.md
notebooks/: idiotypeforge_kaggle.ipynb
scripts/: download_oas.py  download_uniprot.py  finetune_gemma4_unsloth.py  run_gcp.sh  run_gcp_a100.sh  run_local.sh  run_local_gemma.sh  setup_a100.sh  setup_local.sh
tests/: test_cdr3_masked_eval.py  test_cdr_liabilities.py  test_compose_dossier.py  test_compose_dossier_gemma.py  test_dose_estimator.py  test_igfold.py  test_mhcflurry.py  test_number_antibody.py  test_orchestrator.py  test_render_structure.py  test_saliency.py  test_tools.py  test_verification_gates.py  test_verify_pipeline.py  verify_pipeline.py
tests/fixtures/: known_antibodies.py
